# ristinolla

./: .coverage  .coveragerc  .gitignore  README.md  board.py  pyproject.toml  ristinolla.py
dokumentaatio/: heat_map.md  maarittelydokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_6.md
tests/: board_test.py  minimax_test.py
ui/: gui.py  text_ui.py
util/: ai.py  board.py  config.py
