[tool.poetry]
name = "ristinolla"
version = "0.1.0"
description = ""
authors = ["Petro Lehtonen <petro.lehtonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
coverage = "^7.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
